--- a/Ang-GACD-UI/src/styles.css
+++ b/Ang-GACD-UI/src/styles.css
@@ -286,3 +286,5 @@
 .main_content {
     margin-top: 10em;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
