--- a/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
@@ -11,7 +11,7 @@
             <div class="info-box">
                 <span class="info-text">Author</span>
                 <br>
-                <span class="info-value-author">{{testmat.author}}</span>
+                <span class="info-value-author">{{author}}</span>
             </div>
         </div>
         <!-- <div class="col-3">
