Lots of updated pages

--- a/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
@@ -4,7 +4,7 @@
             <div class="info-box">
                 <span class="info-text">Current Category</span>
                 <br>
-                <span class="info-value">{{categoryName}}</span>
+                <span class="info-value">{{category | displayCategory}}</span>
             </div>
         </div>
         <div class="col-2">
