--- a/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
+++ b/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
@@ -5,6 +5,7 @@
             <th>Name</th>
             <th>Start Date</th>
             <th>End Date</th>
+            <th></th>
         </thead>
         <tbody>
             <ng-container *ngFor="let model of CompModels;" >
@@ -13,6 +14,12 @@
                     <td>{{model.name}}</td>
                     <td>{{model.start | displayDate}}</td>
                     <td>{{model.end | displayDate}}</td>
+                    <td>
+                        <button class="nav-btn"
+                        [routerLink]="['/CompetitionResult',model.compId]">
+                            Results
+                        </button>
+                    </td>
                 </tr>
             </ng-container>
         </tbody>
