--- a/Ang-GACD-UI/src/app/pages/profile/profile.component.html
+++ b/Ang-GACD-UI/src/app/pages/profile/profile.component.html
@@ -19,12 +19,15 @@
               </div>
           </div>
         </div>
-          <div class="col-md-6">
+          <div class="col-md-2">
             <div class="main-body">
                 <h4>{{ UserInfo.name }}</h4>
                 <h5>{{ user.email }}</h5>
-                <p1>Rank: Mega Coder</p1>
+                <h5>Rank: Mega Coder</h5>
             </div>
+          </div>
+          <div class="col-md-6">
+            <app-progress-graph></app-progress-graph>
           </div>
   </div>
   <div class="row">
