fixed some random bugs

--- a/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
+++ b/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
@@ -9,13 +9,13 @@
         </thead>
         <tbody>
             <ng-container *ngFor="let model of CompModels;" >
-                <tr [routerLink]="['/CompetitionTest',model.compId]">
-                    <td>{{model.category | displayCategory}}</td>
-                    <td>{{model.name}}</td>
-                    <td>{{model.start | displayDate}}</td>
-                    <td>{{model.end | displayDate}}</td>
-                    <td>
-                        <button class="nav-btn"
+                <tr [routerLink]="['/CompetitionTest',model.compId]" class="hover-highlight">
+                    <td class="opac">{{model.category | displayCategory}}</td>
+                    <td class="opac">{{model.name}}</td>
+                    <td class="opac">{{model.start | displayDate}}</td>
+                    <td class="opac">{{model.end | displayDate}}</td>
+                    <td class="opac">
+                        <button class="kwik-btn"
                         [routerLink]="['/CompetitionResult',model.compId]">
                             Results
                         </button>
