--- a/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
@@ -1,6 +1,6 @@
 <div class = "container">
     <h1>Competition Results</h1>
-    <button (click)="TakeTest()">Take The Test</button>
+    <button class="kwik-btn" (click)="TakeTest()">Take The Test</button><button class="kwik-btn"><fa-icon (click)="getResults()" [icon]="faSync"></fa-icon></button>
     <table class = "table">
         <thead>
             <th>Ranking</th>
