--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
@@ -2,8 +2,26 @@
     height: fit-content;
 } */
 
+.profile-image_container {
+    grid-area: image;
+    margin-right: 0.5rem;
+    border-radius: 50%;
+    height: 4rem;
+    width: 4rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    align-self: center;
+    margin-left: 2rem;
+}
 
-.toggle-btn{
+.profile_image {
+    max-width: 4rem;
+}
+
+.toggle-btn {
     background-color: var(--neutral_purple);
     box-shadow: 0 0 0 0.25rem;
     color: rgba(0,0,0,.55);
@@ -16,8 +34,9 @@
     border-radius: 2rem;
     background-color: black;
     border-radius: 20px;
-    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+    /*box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe; */
 }
+
 .nav-item{
     text-align: right;
 }
@@ -28,5 +47,59 @@
     border-radius: 2rem;
     background-color: black;
     border-radius: 20px;
-    box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+    /*box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;*/
 }
+
+.menu-header {
+    background: linear-gradient(to right, #00f7ff, #a318ff);
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 4fr;
+    grid-template-areas: "greeting greeting" "image details";
+    box-sizing: border-box;
+    width: 100%;
+    align-content: center;
+    color: white;
+    box-shadow: 0 0.5rem 2rem rgba(0, 0, 255, 0.2);
+}
+/*pop out menu header*/
+.menu-body {
+    display: grid;
+    width: 100%;
+}
+
+.menu_icon {
+    position: relative;
+    width: 5%;
+    padding-left: 1em;
+    margin-right: 1rem;
+    color:#fff;
+}
+.menu_icon:hover{
+    cursor: pointer;
+}
+/*pop out list container*/
+
+.nav-item{
+    padding: 1em;
+    margin-right: 1rem;
+    border-bottom-width: thin;
+    border-bottom-style: solid;
+    border-bottom-color: black;
+    cursor: pointer;
+}
+
+/*pop out button*/
+.nav-btn{
+    border: none;
+    background-color:transparent;
+    color: black;
+    font-size: 30px;
+    transition-duration: 0.4s;
+}
+.nav-btn:hover{ 
+    color: #a318ff ;
+}
+
+
+
