--- a/Ang-GACD-UI/src/app/pages/profile/profile.component.html
+++ b/Ang-GACD-UI/src/app/pages/profile/profile.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="auth.user$ | async as user">
-  <div clas="container">
+  <div class="container">
     <div class="row">
       <div class="spacer">
       </div>
