--- a/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
+++ b/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,13 +1,18 @@
 <div class = "container">
-    <h3>Search For User: <input [(ngModel)]="text" (input)="SearchLetters()" placeholder="Enter Username Here"></h3> 
-    <app-lang-select class="" (newLangSelectedEvent)="langSelected($event)"></app-lang-select>
-    <button (click)="GetBestUsers(0)">Overall</button> 
-    <table class = "table">
+    <div class="row">
+    <div class="col-sm-8"> <h3>Search For User: <input [(ngModel)]="text" (input)="SearchLetters()" placeholder="Enter Username Here"></h3> </div>
+    <div class="col-sm-4"><app-lang-select class="" (newLangSelectedEvent)="langSelected($event)"></app-lang-select>
+        <button (click)="GetBestUsers(0)">Overall</button> </div>   
+        
+    </div>
+    
+
+    <table class = "table table-bordered table-hover table-dark">
         <thead>
-            <th>Ranking</th>
-            <th>Username</th>
-            <th>Accuracy</th>
-            <th>WPM</th>
+            <th scope="col">Ranking</th>
+            <th scope="col">Username</th>
+            <th scope="col">Accuracy</th>
+            <th scope="col">WPM</th>
         </thead>
         <tbody>
             <tr *ngFor="let LBModel of FilteredLBModels">
