--- a/Ang-GACD-UI/src/app/pages/test/test.component.css
+++ b/Ang-GACD-UI/src/app/pages/test/test.component.css
@@ -21,13 +21,13 @@
     background-color: var(--dark0_soft);
     border-color: var(--dark0_hard);
     border-width: 5px;
-    border-radius: 2em;
-    width: 95%;
-    height: 5em;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .info-text{
-    margin: 1.5em;
+    margin: 3em;
     color: var(--bright_aqua);
 }
 
