--- a/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
+++ b/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
@@ -1,5 +1,5 @@
 <div class = "container">
-    <table class = "table">
+    <table class = "table table-bordered table-hover table-dark">
         <thead>
             <th>Category</th>
             <th>Name</th>
