--- a/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
+++ b/Ang-GACD-UI/src/app/components/nav-bar/nav-bar.component.css
@@ -62,6 +62,8 @@
 
 .nav-item{
     text-align: right;
+    list-style-type: none; 
+    padding-left: 0px;
 }
 
 .color-btn{
@@ -119,6 +121,7 @@
 .nav-btn:hover{ 
     color: #a318ff ;
 }
-
-
-
+.ul{
+    list-style-type: none;
+    padding: 0px;
+}
