adding betting feature

--- a/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
@@ -7,6 +7,7 @@
             <th>Username</th>
             <th>Accuracy</th>
             <th>WPM</th>
+            <th></th>
         </thead>
         <tbody>
             <tr *ngFor="let CompStatModel of compStatModels">
@@ -16,6 +17,7 @@
                 <ng-template #elseBlock><td>{{CompStatModel.name}}</td></ng-template>
                 <td>{{CompStatModel.accuracy| displayPercent}}%</td>
                 <td>{{CompStatModel.wpm}}</td>
+                <td><button class="kwik-btn" (click)="PlaceBet(CompStatModel.userId)">Bet 100</button></td>
             </tr>
         </tbody>
     </table>
