--- a/Ang-GACD-UI/src/app/pages/profile/profile.component.html
+++ b/Ang-GACD-UI/src/app/pages/profile/profile.component.html
@@ -41,7 +41,7 @@
           <label>RevaPoints</label>
       </div>
       <div class="col-sm-6">
-          <p>{{UserInfo.revapoints}}</p>
+          <p>{{UserInfo.revapoints}}</p> <button class="kwik-btn" (click)="claimBets(UserInfo.userId)">Claim Bets</button>
       </div>
           <div class="col-sm-4">
               <label>User Name</label>
