--- a/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
+++ b/Ang-GACD-UI/src/app/pages/view-competitions/view-competitions.component.html
@@ -1,4 +1,5 @@
 <div class = "container">
+    <button class="kwik-btn"><fa-icon (click)="GetCompetitions()" [icon]="faSync"></fa-icon></button>
     <table class = "table table-bordered table-hover table-dark">
         <thead>
             <th>Category</th>
