basic quality of life for bets

--- a/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
@@ -7,7 +7,7 @@
             <th>Username</th>
             <th>Accuracy</th>
             <th>WPM</th>
-            <th></th>
+            <th>Bet RevaPoints</th>
         </thead>
         <tbody>
             <tr *ngFor="let CompStatModel of compStatModels">
