--- a/Ang-GACD-UI/src/app/pages/profile/profile.component.html
+++ b/Ang-GACD-UI/src/app/pages/profile/profile.component.html
@@ -16,10 +16,10 @@
               />
           </div>
         </div>
-          <div class="col-md-2">
+          <div class="col-md-4">
             <div class="profile-head">
-                <h2>{{ UserInfo.name }}</h2>
-                <h3>{{ user.email }}</h3>
+                <h2>Name: {{ UserInfo.name }}</h2>
+                <h3>Email: {{ user.email }}</h3>
                 <h4>Rank: Mega Coder</h4>
             </div>
           </div>
