--- a/Ang-GACD-UI/src/app/pages/home/home.component.css
+++ b/Ang-GACD-UI/src/app/pages/home/home.component.css
@@ -44,4 +44,9 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+.main_test_button{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 12px;
+    margin: 6px;
+}
 
