--- a/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-result/competition-result.component.html
@@ -1,7 +1,7 @@
 <div class = "container">
     <h1>Competition Results</h1>
-    <button class="kwik-btn" (click)="TakeTest()">Take The Test</button><button class="kwik-btn"><fa-icon (click)="getResults()" [icon]="faSync"></fa-icon></button>
-    <table class = "table">
+    <button class="btn btn-light" (click)="TakeTest()">Take The Test</button><button class="kwik-btn"><fa-icon (click)="getResults()" [icon]="faSync"></fa-icon></button>
+    <table class="table table-bordered table-hover table-dark">
         <thead>
             <th>Ranking</th>
             <th>Username</th>
