--- a/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.css
+++ b/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.css
@@ -21,9 +21,9 @@
     background-color: var(--dark0_soft);
     border-color: var(--dark0_hard);
     border-width: 5px;
-    border-radius: 2em;
-    width: 95%;
-    height: 5em;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .info-text{
@@ -38,4 +38,7 @@
 .info-value-author{
     color: var(--bright_purple);
     font-size: 15pt;
+}
+.input-form{
+    width: 70%;
 }
