--- a/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
+++ b/Ang-GACD-UI/src/app/pages/competition-test/competition-test.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
     <div class="row">
+        <div class="col-2"></div>
         <div class="col-2">
             <div class="info-box">
                 <span class="info-text">Current Category</span>
@@ -42,7 +43,7 @@
         
     </div> -->
 <div class="mt-2">
-    <div class="container-fluid">
+    <div class="container-fluid input-form">
       <div class="row">
           <div class="col-12">
             <pre tabindex="0" (click)= "focusinput" (keydown)="keyIntercept($event)" class="text-light bg-dark p-4" ><span *ngFor="let t of state.wordarray; index as i"[attr.id]="'char-'+i">{{t}}</span></pre>
