--- a/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
+++ b/Ang-GACD-UI/src/app/pages/leaderboard/leaderboard.component.html
@@ -2,7 +2,7 @@
     <div class="row">
     <div class="col-sm-8"> <h3>Search For User: <input [(ngModel)]="text" (input)="SearchLetters()" placeholder="Enter Username Here"></h3> </div>
     <div class="col-sm-4"><app-lang-select class="" (newLangSelectedEvent)="langSelected($event)"></app-lang-select>
-        <button (click)="GetBestUsers(0)">Overall</button> </div>   
+        <button class="btn btn-light kwik-btn"(click)="GetBestUsers(0)">Overall</button> </div>   
         
     </div>
     
