--- a/Ang-GACD-UI/src/app/pages/profile/profile.component.css
+++ b/Ang-GACD-UI/src/app/pages/profile/profile.component.css
@@ -1,7 +1,7 @@
 mat-tab-group{
     overflow-x: hidden; /* Hide scrollbars */
-    font-size:large;
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 8px;
+    font-family: 'Press Start 2P', cursive;
 }
 mat-tab{
     color:azure;
@@ -15,5 +15,8 @@ mat-tab{
 }
 .profile-head{
     color: white;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Press Start 2P', cursive;
+}
+.profile-head h2 h3 h4{
+    font-family: 'Press Start 2P', cursive;
 }
