--- a/Ang-GACD-UI/src/styles.css
+++ b/Ang-GACD-UI/src/styles.css
@@ -86,6 +86,9 @@
     margin-top: 1rem;
     justify-self: center;
     align-self: center;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 16px;
+    
 }
 
 .account-details {
@@ -155,9 +158,9 @@
 
 /*Body*/
 .main-container_bg {
-    height: 100%;
-    width: 100%;
-    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -2;
@@ -166,38 +169,8 @@
     transition: opacity 300ms linear;
     opacity: 1;
     background: linear-gradient(to bottom, #f360a2, #2E1D65);
+    background-size: auto 100%;
     transition: opacity 300ms linear;
-}
-
-.copyright_text {
-    letter-spacing: 0.1rem;
-    color: white;
-}
-
-@media only screen and (max-width: 300px) {
-    .slide-menu {
-    width: 100%;
-    }
-}
-
-.nav-btn{   
-    margin: .2em;
-    border: transparent;
-    background-color: transparent;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 40px;
-    font-family: "Arial", sans-serif;
-    transition-duration: 0.4s;
-    
-}
-/*pop out menu footer*/
-.main_footer {
-    background: transparent;
-    position: absolute;
-    bottom: 1rem;
-    left: 1.5rem;
-    z-index: 100;
 }
 
 .hover-highlight{
@@ -209,6 +182,11 @@
     cursor: pointer;
     background-color:rgba(158, 162, 163, 0.5);
 }
+.kwik-btn{
+    font-family: 'Press Start 2P', cursive;
+    font-size: 8px;
+    margin: 6px;
+}
 .opac{
     color: black;   
 }
@@ -216,4 +194,4 @@
     margin-top: 10em;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Press Start 2P', cursive; }
